more of coll drawing

--- a/Pr' Codjumper/Pr' Codjumper.vcxproj
+++ b/Pr' Codjumper/Pr' Codjumper.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="cg_local.hpp" />
     <ClInclude Include="cg_offsets.hpp" />
     <ClInclude Include="cl_mouse.hpp" />
+    <ClInclude Include="cm_brush.hpp" />
     <ClInclude Include="commands.hpp" />
     <ClInclude Include="com_channel.hpp" />
     <ClInclude Include="dvar.hpp" />
@@ -210,6 +211,7 @@
     <ClCompile Include="cg_hooks.cpp" />
     <ClCompile Include="cg_init.cpp" />
     <ClCompile Include="cl_mouse.cpp" />
+    <ClCompile Include="cm_brush.cpp" />
     <ClCompile Include="commands.cpp" />
     <ClCompile Include="com_channel.cpp" />
     <ClCompile Include="dvar.cpp" />
