--- a/Pr' Codjumper/Pr' Codjumper.vcxproj.filters
+++ b/Pr' Codjumper/Pr' Codjumper.vcxproj.filters
@@ -76,6 +76,9 @@
     <Filter Include="Source Files\cl">
       <UniqueIdentifier>{ff9ba660-21fc-4e1e-8562-65df1f0b9df0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\cmod">
+      <UniqueIdentifier>{ce734842-0aaf-4f73-a737-6fcedc32af72}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.hpp">
@@ -240,6 +243,9 @@
     <ClInclude Include="t_movement.hpp">
       <Filter>Source Files\tool</Filter>
     </ClInclude>
+    <ClInclude Include="cm_brush.hpp">
+      <Filter>Source Files\cmod</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -394,6 +400,9 @@
     </ClCompile>
     <ClCompile Include="t_movement.cpp">
       <Filter>Source Files\tool</Filter>
+    </ClCompile>
+    <ClCompile Include="cm_brush.cpp">
+      <Filter>Source Files\cmod</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
