ability to view world brush collisions and change settings related to it (like only drawing bounces)

--- a/Pr' Codjumper/Pr' Codjumper.vcxproj.filters
+++ b/Pr' Codjumper/Pr' Codjumper.vcxproj.filters
@@ -419,5 +419,8 @@
     <ClCompile Include="rb_endscene.cpp">
       <Filter>Source Files\rb</Filter>
     </ClCompile>
+    <ClCompile Include="r_gui_geometry.cpp">
+      <Filter>Source Files\render\gui\features</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
