--- a/Pr' Codjumper/Pr' Codjumper.vcxproj
+++ b/Pr' Codjumper/Pr' Codjumper.vcxproj
@@ -303,6 +303,7 @@
     <ClCompile Include="r_gui.cpp" />
     <ClCompile Include="r_gui_automation.cpp" />
     <ClCompile Include="r_gui_c_items.cpp" />
+    <ClCompile Include="r_gui_geometry.cpp" />
     <ClCompile Include="r_gui_main.cpp" />
     <ClCompile Include="r_gui_sub_c.cpp" />
     <ClCompile Include="r_gui_visuals.cpp" />
